--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:text="@string/forget_password"
         android:textColor="@color/backColor"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/smsText" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <EditText
         android:id="@+id/phoneNumber"
@@ -83,11 +83,11 @@
         android:layout_marginLeft="16dp"
         android:text="@string/pass"
         android:textColor="@color/backColor"
-        app:layout_constraintBottom_toTopOf="@+id/smsText"
+        app:layout_constraintBottom_toTopOf="@+id/password"
         app:layout_constraintStart_toStartOf="parent" />
 
     <EditText
-        android:id="@+id/smsText"
+        android:id="@+id/password"
         android:layout_width="0dp"
         android:layout_height="45dp"
         android:layout_marginTop="40dp"
@@ -114,8 +114,9 @@
         android:textSize="18sp"
         android:translationZ="4dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/smsText" />
+        app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <Button
         android:id="@+id/btn"
@@ -125,6 +126,7 @@
         android:layout_marginLeft="24dp"
         android:layout_marginTop="8dp"
         android:text="@string/phone"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
