--- a/app/src/main/res/layout/activity_forgetpass.xml
+++ b/app/src/main/res/layout/activity_forgetpass.xml
@@ -103,10 +103,10 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:autofillHints="@string/codeMask"
+        android:autofillHints="code"
         android:background="@drawable/fields"
         android:ems="10"
-        android:hint="@string/pass_mask"
+        android:hint="@string/codeMask"
         android:inputType="number"
         android:textColor="@color/textColor"
         android:visibility="invisible"
