--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -102,15 +102,16 @@
         app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />
 
     <Button
-        android:id="@+id/getCodeButton"
+        android:id="@+id/loginButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="53dp"
-        android:background="@drawable/whitebuttonstyle"
+        android:background="@drawable/notenabledbutton"
+        android:enabled="false"
         android:elevation="3dp"
         android:fontFamily="@font/roboto_medium"
         android:text="@string/login"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/inactiveColor"
         android:textSize="18sp"
         android:translationZ="4dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -154,6 +155,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/getCodeButton" />
+        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
