--- a/app/src/main/res/layout/orderslistelement.xml
+++ b/app/src/main/res/layout/orderslistelement.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/backColor">
 
     <LinearLayout
@@ -90,6 +90,7 @@
             android:orientation="horizontal"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="5dp"
+            android:layout_marginBottom="20dp"
             >
 
             <ImageView
