--- a/app/src/main/res/layout/fragment_active_orders.xml
+++ b/app/src/main/res/layout/fragment_active_orders.xml
@@ -8,5 +8,6 @@
     <ListView
         android:id="@+id/activeOrdersList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:divider="@android:color/transparent"/>
 </FrameLayout>
