--- a/app/src/main/res/layout/orderslistelement.xml
+++ b/app/src/main/res/layout/orderslistelement.xml
@@ -9,7 +9,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/ordersstyle">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -88,9 +90,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="20dp"
+            android:paddingTop="5dp"
+            android:paddingBottom="20dp"
             >
 
             <ImageView
@@ -98,7 +99,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="4dp"
-                app:srcCompat="@drawable/offersimage" />
+                app:srcCompat="@drawable/offersimage"
+                android:layout_marginLeft="20dp"/>
 
             <TextView
                 android:id="@+id/currentOffers"
