--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -40,6 +40,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     </androidx.viewpager.widget.ViewPager>
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="4dp"
+        android:layout_above="@id/linearLayout2"
+        android:background="@drawable/bottombar_shadow"/>
 
     <LinearLayout
         android:id="@+id/linearLayout2"
