--- a/app/src/main/res/layout/orderslistelement.xml
+++ b/app/src/main/res/layout/orderslistelement.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/backColor">
+    app:cardBackgroundColor="@color/backListColor">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginBottom="5dp"
         android:background="@drawable/ordersstyle">
