--- a/app/src/main/res/menu/bottom_navigation_main.xml
+++ b/app/src/main/res/menu/bottom_navigation_main.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_notifications"
+        android:id="@+id/myOrders"
         android:enabled="true"
         android:icon="@drawable/ic_orders"
         android:title="Мои заявки"
@@ -14,7 +14,7 @@
         android:title=""
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_chat"
+        android:id="@+id/myProfile"
         android:enabled="true"
         android:icon="@drawable/ic_profile"
         android:title="Профиль"
