--- a/app/src/main/res/drawable/ic_edit.xml
+++ b/app/src/main/res/drawable/ic_edit.xml
@@ -1,13 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="24dp"
-    android:height="24dp"
-    android:viewportWidth="24"
-    android:viewportHeight="24">
-  <path
-      android:pathData="M12,12m-12,0a12,12 0,1 1,24 0a12,12 0,1 1,-24 0"
-      android:fillColor="#000000"
-      android:fillAlpha="0.12"/>
-  <path
-      android:pathData="M17.8125,8.6875L16.5938,9.9063L14.0938,7.4063L15.3125,6.1875C15.4375,6.0625 15.5938,6 15.7812,6C15.9688,6 16.125,6.0625 16.25,6.1875L17.8125,7.75C17.9375,7.875 18,8.0313 18,8.2188C18,8.4063 17.9375,8.5625 17.8125,8.6875ZM6,15.5L13.375,8.125L15.875,10.625L8.5,18H6V15.5Z"
-      android:fillColor="#666666"/>
+        android:width="24dp"
+        android:height="24dp"
+        android:viewportWidth="24.0"
+        android:viewportHeight="24.0">
+    <path
+        android:fillColor="#FF666666"
+        android:pathData="M3,17.25V21h3.75L17.81,9.94l-3.75,-3.75L3,17.25zM20.71,7.04c0.39,-0.39 0.39,-1.02 0,-1.41l-2.34,-2.34c-0.39,-0.39 -1.02,-0.39 -1.41,0l-1.83,1.83 3.75,3.75 1.83,-1.83z"/>
 </vector>
