--- a/app/src/main/res/layout/activity_orders.xml
+++ b/app/src/main/res/layout/activity_orders.xml
@@ -5,8 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-
     tools:context=".OrdersActivity">
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -35,7 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
-            app:tabIndicatorColor="@color/backColor" />
+            app:tabIndicatorColor="@color/backColor" >
+        </com.google.android.material.tabs.TabLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.viewpager.widget.ViewPager
@@ -45,9 +46,7 @@
         android:layout_weight="1"
         android:background="#EEEEEE"
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
-
     </androidx.viewpager.widget.ViewPager>
-
 
 </LinearLayout>
 
